OTel Observability Implementation
WIP - OTel Observability Implementation